# sqlite3cc-cmake

./: CMakeLists.txt  conanfile.py
sqlite3cc-0.1.1/: Makefile.am  Makefile.in  NEWS  README  TODO  config.h.in  configure  configure.ac
sqlite3cc-0.1.1/include/: Makefile.am  Makefile.in
sqlite3cc-0.1.1/src/: Makefile.am  Makefile.in
sqlite3cc-0.1.1/test/: Makefile.am  Makefile.in  test-main.cc
