# Makefile.am -- process this file with automake to produce Makefile.in

nobase_include_HEADERS = \
	sqlite3cc.h \
	sqlite3cc/basic_statement.h \
	sqlite3cc/command.h \
	sqlite3cc/connection.h \
	sqlite3cc/exception.h \
	sqlite3cc/manipulator.h \
	sqlite3cc/query.h \
	sqlite3cc/row.h \
	sqlite3cc/transaction.h \
	sqlite3cc/util.h
